# dns

./: Cargo.toml  LICENSE  README.md
dns_decode/: Cargo.toml
dns_decode/src/: domain_name.rs  input.rs  lib.rs  message.rs  message_header.rs  name.rs  query.rs  resource_record.rs
dns_encode/: Cargo.toml
dns_encode/src/: lib.rs  message.rs  message_header.rs  query.rs
dns_resolver/: Cargo.toml
dns_resolver/src/: main.rs
dns_serde/: Cargo.toml
dns_types/: Cargo.toml
dns_types/src/: lib.rs  message.rs  message_header.rs  name.rs  query.rs  resource_record.rs
