[package]
name = "dns_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns_types = { path = "../dns_types"}
dns_encode = { path = "../dns_encode"}
dns_decode = { path = "../dns_decode"}
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
rand = "0.8.5"